# Fast_zero

./: .coverage  .gitignore  desktop.ini  pyproject.toml
fastapi_zero/: app.py
tests/: test_app.py
