[project]
name = "fastapi_zero"
version = "0.1.0"
description = ""
authors = [
    {name = "vitor-nery11",email = "vitornerysantos24@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,< 4.0"
dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.14,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.ruff]
line-length = 79 
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true 
select = ['I','F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.init_options]
pythonpath = "."
addopts = '-p no:warnings'


[tool.taskipy.tasks]
lint = 'ruff check .'
format = 'ruff format .'
run = 'fastapi dev fastapi_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x  --cov=fastapi_zero -vv' 
post_test  = 'coverage html'
